<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/nav_posts">


    <fragment
        android:id="@+id/nav_posts"
        android:name="ru.netology.nework.app.activity.PostsFragment"
        android:label="@string/posts"
        tools:layout="@layout/fragment_posts">
        <action
            android:id="@+id/action_nav_posts_to_sheet_fragment"
            app:destination="@id/sheet_fragment" />
    </fragment>


    <fragment
        android:id="@+id/nav_users"
        android:name="ru.netology.nework.app.activity.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_users" />


    <fragment
        android:id="@+id/nav_events"
        android:name="ru.netology.nework.app.activity.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_nav_events_to_sheet_fragment"
            app:destination="@id/sheet_fragment" />
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="ru.netology.nework.app.activity.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_appActivity"
            app:destination="@id/nav_app_activity" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="ru.netology.nework.app.activity.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_appActivity"
            app:destination="@id/nav_app_activity" />
        <action
            android:id="@+id/action_signUpFragment_to_profileFragment"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.netology.nework.app.activity.ProfileFragment"
        android:label="@string/profile">
        <action
            android:id="@+id/action_nav_profile_to_newEventFragment"
            app:destination="@id/newEventFragment" />
        <action
            android:id="@+id/action_nav_profile_to_newJobsFragment"
            app:destination="@id/newJobsFragment" />
        <action
            android:id="@+id/action_nav_profile_to_newPostFragment"
            app:destination="@id/newPostFragment" />
        <action
            android:id="@+id/action_nav_profile_to_sheet_fragment"
            app:destination="@id/sheet_fragment" />
    </fragment>

    <fragment
        android:id="@+id/jobsFragment"
        android:name="ru.netology.nework.app.activity.JobsFragment"
        android:label="@string/job"
        tools:layout="@layout/fragment_jobs" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="ru.netology.nework.app.activity.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/newEventFragment"
        android:name="ru.netology.nework.app.activity.NewEventFragment"
        android:label="@string/new_event"
        tools:layout="@layout/fragment_new_event" />
    <fragment
        android:id="@+id/newJobsFragment"
        android:name="ru.netology.nework.app.activity.NewJobsFragment"
        android:label="@string/new_job"
        tools:layout="@layout/fragment_new_jobs" />
    <fragment
        android:id="@+id/newPostFragment"
        android:name="ru.netology.nework.app.activity.NewPostFragment"
        android:label="@string/new_post"
        tools:layout="@layout/fragment_new_post" />

    <fragment
        android:id="@+id/imageFragment"
        android:name="ru.netology.nework.app.activity.ImageFragment"
        android:label="@string/image_picker_provider_authority_suffix"
        tools:layout="@layout/fragment_image">


    </fragment>

    <dialog
        android:id="@+id/sheet_fragment"
        android:name="ru.netology.nework.app.activity.SheetFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sheet" />

    <fragment
        android:id="@+id/wallFragment"
        android:name="ru.netology.nework.app.activity.WallFragment"
        android:label="@string/description"
        tools:layout="@layout/fragment_wall">
        <action
            android:id="@+id/action_wallFragment_to_sheet_fragment"
            app:destination="@id/sheet_fragment" />
    </fragment>

    <fragment
        android:id="@+id/photoProfileFragment"
        android:name="ru.netology.nework.app.activity.PhotoProfileFragment"
        android:label="fragment_photo_profile"
        tools:layout="@layout/fragment_photo_profile" />

    <activity
        android:id="@+id/nav_app_activity"
        android:name="ru.netology.nework.app.activity.AppActivity"
        android:label="AppActivity" />


</navigation>