<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activity.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_face_retouching_off_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description" />

            <TextView
                android:id="@+id/name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/avatar_profile"
                app:layout_constraintTop_toTopOf="@id/avatar_profile"
                app:layout_constraintBottom_toBottomOf="@id/avatar_profile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts" />


            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/fragment_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/add_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="add_post, add_event, add_job"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_content"
        style="@style/Theme.Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        android:contentDescription="@string/description" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_post"
        style="@style/Theme.Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/add_event"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_event"
        style="@style/Theme.Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/add_job"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_job"
        style="@style/Theme.Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/add_content"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>