<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activity.SignUpFragment">

    <ProgressBar
        android:id="@+id/progress_bar_fragment_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="36dp"
        app:civ_border_color="@color/green"
        app:civ_border_width="5dp"
        android:src="@drawable/ic_baseline_account_box_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/sing_up"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:layout_marginTop="200dp"
        android:alwaysDrawnWithCache="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/photo_profile"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/back"
                android:ems="10"
                android:hint="@string/name"
                tools:ignore="DuplicateClickableBoundsCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/back"
                android:hint="@string/login" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/back"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordCheckEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/back"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/green"
            android:text="@string/register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/already_have_an_account"
            android:textAllCaps="false"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerUserBtn" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

