<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activity.NewEventFragment">

    <ScrollView
        android:id="@+id/scroll_fragment_new_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:gravity="start|top"
                android:hint="@string/new_event"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColorHint="@color/green"
                tools:ignore="MissingConstraints"
                tools:text="@tools:sample/lorem[50]" />

            <FrameLayout
                android:id="@+id/frame_layout_photo_fragment_new_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/image_view_photo_fragment_new_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/description_photo"
                    tools:srcCompat="@drawable/ic_banner_image" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_remove_photo_fragment_new_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    app:backgroundTint="@color/green"
                    android:text="@string/clear"
                    android:textAllCaps="false"
                    app:cornerRadius="24dp" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_date_fragment_new_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:gravity="start|top"
                android:hint="@string/date"
                android:inputType="date"
                android:padding="8dp"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_date_fragment_new_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:text="@tools:sample/date/ddmmyy" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_time_fragment_new_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:gravity="start|top"
                android:hint="@string/time"
                android:inputType="time"
                android:padding="8dp"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_time_fragment_new_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="time"
                    tools:text="@tools:sample/date/hhmm" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_speakers_fragment_new_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/add_speakers"
                android:textAllCaps="false"
                app:cornerRadius="24dp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_app_bar_fragment_new_event"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_take_photo_fragment_new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/description_take_photo"
            android:padding="16dp"
            android:src="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/image_view_pick_photo_fragment_new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/description_take_photo"
            android:padding="16dp"
            android:src="@android:drawable/ic_menu_gallery" />

        <ImageView
            android:id="@+id/image_view_pick_geo_fragment_new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/description_take_photo"
            android:padding="16dp"
            android:src="@android:drawable/ic_menu_myplaces" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>