<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activity.SignInFragment">

    <ProgressBar
        android:id="@+id/progress_bar_fragment_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alwaysDrawnWithCache="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="MissingConstraints,UselessParent"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/back"
                android:hint="@string/login" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/back"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:boxStrokeColor="@color/green"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/green"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/green"
            android:insetBottom="12dp"
            android:text="@string/sign_in" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="120dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/don_t_have_an_account_yet"
            android:textColor="@color/green"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            app:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

